# tll

backend/: .gitignore  app.py  dependencies.py  exception_handlers.py  middlewares.py  prompts.txt  pyproject.toml
backend/controllers/: admin.py  shopping.py  user.py
backend/models/: __init__.py  admin.py  shopping.py  user.py
backend/plugins/: __init__.py  alipay.py  aliyun_smscode.py  alyoss.py  consul.py  encipher.py  json.py  kafka.py  redis.py  snowflake.py  token_handler.py
backend/plugins/snowflake/: snowflake.py
backend/schemas/: admin.py  shopping.py  user.py
miniapp/: .gitignore  App.vue  config.js  index.html  main.js  manifest.json  pages.json  uni.promisify.adaptor.js
miniapp/apis/seckill/: BaseSeckillHttp.js  seckillHttp.js
miniapp/apis/user/: BaseUserHttp.js  userHttp.js
miniapp/assets/: uni.css
miniapp/pages/: address-edit.vue  address-list.vue  login.vue  order-detail.vue  order-list.vue  product-detail.vue  product-list.vue  profile.vue  user-detail.vue
miniapp/plugins/: request.js  serializer.js  stores.js  url.js
web/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
web/app/: app.js  config.js
web/app/plugins/: feedback.js  request.js  router.js  serializer.js  store.js
web/app/views/: app.vue  dashboard.vue  main.vue  order.vue  product.vue
