[tool.aerich]
tortoise_orm = "config.TORTOISE_ORM_CONFIG"
location = "./migrations"
src_folder = "./."


[project]
name = "tll-server"
version = "1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "loguru >=0.7.3",
    "uvicorn>=0.37.0",
    "aiomysql>=0.2.0",
    "pyjwt >=2.10.1",
    "aiokafka >=0.12.0",
    "py-consul>=1.6.0",
    "python-alipay-sdk>=3.3.0",
    "alibabacloud-dypnsapi20170525 >=2.0.0",
    "aerich>=0.9.2",
    "tortoise-orm[aiomysql]>=0.25.1",
    "kafka-python",
    "python-multipart>=0.0.22",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "redis-om>=1.0.6",
    "orjson>=3.11.8",
]


